--- a/.github/workflows/preview-start.yml
+++ b/.github/workflows/preview-start.yml
@@ -5,7 +5,7 @@ on: pull_request_target
 jobs:
   preview:
     runs-on: ubuntu-latest
-    if: github.repository == 'doocs/md'
+    if: github.repository == 'byronlau/md'
     steps:
       - name: Create
         uses: actions-cool/maintain-one-comment@v3
